# PieBotReborn

./: .gitignore  Cargo.toml  README.md
secret_example/: discord  guilds  spotifyId  spotifySecret  youtube
src/: main.rs
src/commands/: mod.rs  now_playing.rs  pause.rs  ping.rs  play.rs  queue.rs  remove.rs  resume.rs  rps.rs  skip.rs  stop.rs
src/utils/: audio_handler.rs  guild_and_voice_channel_id.rs  identify_source.rs  interaction.rs  mod.rs  query_spotify.rs  query_youtube.rs  reset_serprops.rs  respond.rs  shuffle_vec.rs  spotify.rs  structs.rs  user_current_voice_and_guild.rs  youtube.rs
