[package]
name = "pie_bot_reborn"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
songbird = "0.5"
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4", "alac"] }
rand = "0.9"
regex = "1.11"
serde_json = "1"
base64_light = "0.1.5"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.serenity]
version = "0.12"
default-features = false
features = [
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "rustls_backend",
    "voice",
    "simd_json",
]
