[package]
name = "pie_bot_reborn"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
symphonia = { version = "0.5", default-features = false, features = ["aac", "mkv", "ogg", "mp3", "isomp4", "vorbis"] }
rand = "0.10"
regex-lite = "0.1"
serde_json = "1"
base64_light = "0.1.5"

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird.git"
branch = "serenity-next"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
default-features = false
features = [
    "cache",
    "gateway",
    "http",
    "model",
    "rustls_backend",
    "voice",
]

[patch.crates-io]
audiopus_sys = { git = "https://github.com/amsam0/audiopus_sys.git" }
